[package]
name = "co2meter-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust library to iteract with co2meters. This is an implementation of the CO2meter python libary (https://github.com/vfilimonov/co2meter)"
repository = "https://github.com/zaporter/co2meter-rs"
keywords = ["co2","library","interface","meter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
hidapi = "1.4.1"
chrono = "0.4.19"
serde = {version="1.0.139", optional=true}
